<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.musix.ArtistsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nowPlaying"
            style="@style/activities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/now" />

        <Button
            android:id="@+id/radio"
            style="@style/activities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/radio" />

        <Button
            android:id="@+id/library"
            style="@style/activities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/library" />

        <Button
            android:id="@+id/albums"
            style="@style/activities"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/albums" />
    </LinearLayout>

    <TextView
        style="@style/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artistsTextView" />
</LinearLayout>
